cabal-version:      3.0
name:               jsonad
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Justin Kian Romeon
maintainer:         romeonjustin@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  JSONParser
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      QuickCheck
    hs-source-dirs:   src
    default-language: Haskell2010

executable jsonad
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        jsonad

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite jsonad-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        QuickCheck,
        jsonad
